build: replace auto dependency submission to support Java 25
Adds a repository-owned dependency submission workflow that explicitly uses Java 25.

Since the generated Automatic Dependency Submission job is disabled in repository settings, we handle dependency submission with a repository-owned workflow. Restoring .mvn/jvm.config is safe because the generated Java 21 caller is no longer active.

Closes #516